<resources>
    <string name="app_name">LMS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="department_name">Department Name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="hod">HOD</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="student_name">Student Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="roll_no">Roll No.</string>
    <string name="semester">Semester</string>
    <string name="update">Update</string>
    <string name="loading">Loading…</string>
</resources>